--- a/react-mern/src/index.css
+++ b/react-mern/src/index.css
@@ -1,33 +1,8 @@
-/* index.css */
+/* General Default styles */
 
-/* Reset some basic styles */
-body,
-h1,
-h2,
-h3,
-p,
-ul {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  color: #333;
-}
-
-a {
-  text-decoration: none;
-  color: #007bff;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-ul {
-  list-style-type: none;
-  padding-left: 0;
+    font-family: 'Poppins', sans-serif;
+    background-color: #1a242d;
 }
