Resume pdf path updated

--- a/react-mern/src/App.css
+++ b/react-mern/src/App.css
@@ -268,7 +268,7 @@ p {
   font-weight: bold;
 }
 
-#resume a[href$=".pdf"] {
+#resume a[href$="https://drive.google.com/file/d/1Jnz1VpsCX6WRKrnmCRKzAddjUD0PQQrs/view?usp=sharing"] {
   display: inline-block;
   margin-top: 20px;
   padding: 10px 15px;
